tests/testcases/net2/errors/BCE0138-1.boo
"""
BCE0138-1.boo(7,11): BCE0138: 'Foo' is not a generic definition.
"""
class Foo:
	pass
	
foo = Foo of string()
